crates/tests/src/snapshots/fe_compiler_tests__compile_errors__binary_op_lshift_with_int.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: The right hand side of this operation must be unsigned
  ┌─ [snippet]:5:8
  │
5 │   a << b
  │        ^ incompatible signed numeric


